small env changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,14 @@ services:
       - .env
     environment:
       - GCS_AUTH_1=/app/service-account-key.json
+      - GCS_BUCKET_NAME_1=darlingimages
+      - GCS_BUCKET_NAME_2=duelistRoses
+      - GCS_API_KEY_1
+      - GCS_API_KEY_2
+      - PORT=8080
+      - MAX_FILE_SIZE_MB=100
+      - ALLOWED_IPS=
+      - ALLOWED_ORIGINS=*
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "-q", "--spider", "http://localhost:8080/health"]
